Added ability to seek, change volume, pause, etc

--- a/src/client/src/views/App.scss
+++ b/src/client/src/views/App.scss
@@ -15,6 +15,21 @@
   height: 100%;
 }
 
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 p {
   margin-bottom: 5px !important;
+  font-size: 14px;
+}
+
+h5 {
+  font-size: 16px !important;
 }
